# cviauto_training

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Client/: CMakeLists.txt
ClientProject/: CMakeLists.txt  README.md
ClientProject/Include/: testservice.h
ClientProject/Sources/: TestInfo.cpp  main.cpp  testservice.c
Common/: CMakeCache.txt  CMakeLists.txt  Makefile  TestInfo.h  cmake_install.cmake  org.example.ITestService.xml  testservice.c  testservice.h
Common/Include/: CMakeLists.txt  TestInfo.h  org.example.ITestService.xml
ServerProject/: CMakeLists.txt
ServerProject/Include/: testservice.h
ServerProject/Sources/: TestInfo.cpp  main copy.cpp  main.cpp  testservice.c
Service/: CMakeLists.txt
ServiceProject/: CMakeLists.txt  README.md
ServiceProject/GDBus/: testservice.c  testservice.h
ServiceProject/Include/: TestInfo.h
ServiceProject/Sources/: TestInfo.cpp  main.cpp
gdbus/: gdbusdemo_gen.c  gdbusdemo_gen.h
include/: ITestService.h  SharedMemory.h
sources/Client/: Clientlmpl.cpp
sources/Service/: TestServicelmpl.cpp
